--- a/src/output.css
+++ b/src/output.css
@@ -757,6 +757,10 @@ video {
   display: table;
 }
 
+.hidden {
+  display: none;
+}
+
 .h-16 {
   height: 4rem;
 }
@@ -841,16 +845,20 @@ video {
   height: 24rem;
 }
 
-.h-12 {
-  height: 3rem;
-}
-
 .h-2\.5 {
   height: 0.625rem;
 }
 
 .h-2 {
   height: 0.5rem;
+}
+
+.h-\[400px\] {
+  height: 400px;
+}
+
+.h-32 {
+  height: 8rem;
 }
 
 .w-52 {
@@ -901,6 +909,10 @@ video {
   width: 2.5rem;
 }
 
+.w-\[200px\] {
+  width: 200px;
+}
+
 .w-\[88\%\] {
   width: 88%;
 }
@@ -933,10 +945,6 @@ video {
   width: 89px;
 }
 
-.w-1\/4 {
-  width: 25%;
-}
-
 .w-\[90\%\] {
   width: 90%;
 }
@@ -951,6 +959,18 @@ video {
 
 .w-3\/4 {
   width: 75%;
+}
+
+.w-1\/4 {
+  width: 25%;
+}
+
+.w-\[400px\] {
+  width: 400px;
+}
+
+.w-\[800px\] {
+  width: 800px;
 }
 
 .basis-1\/2 {
@@ -1037,10 +1057,6 @@ video {
 
 .justify-between {
   justify-content: space-between;
-}
-
-.justify-around {
-  justify-content: space-around;
 }
 
 .space-y-2 > :not([hidden]) ~ :not([hidden]) {
@@ -1153,6 +1169,16 @@ video {
   border-radius: 14px;
 }
 
+.rounded-b-lg {
+  border-bottom-right-radius: 0.5rem;
+  border-bottom-left-radius: 0.5rem;
+}
+
+.rounded-t-lg {
+  border-top-left-radius: 0.5rem;
+  border-top-right-radius: 0.5rem;
+}
+
 .rounded-tr-\[158px\] {
   border-top-right-radius: 158px;
 }
@@ -1254,6 +1280,11 @@ video {
   background-color: rgb(239 68 68 / var(--tw-bg-opacity));
 }
 
+.bg-blue-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(96 165 250 / var(--tw-bg-opacity));
+}
+
 .p-2 {
   padding: 0.5rem;
 }
@@ -1316,6 +1347,11 @@ video {
   padding-right: 2rem;
 }
 
+.py-3 {
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+}
+
 .px-4 {
   padding-left: 1rem;
   padding-right: 1rem;
@@ -1324,11 +1360,6 @@ video {
 .px-1 {
   padding-left: 0.25rem;
   padding-right: 0.25rem;
-}
-
-.py-3 {
-  padding-top: 0.75rem;
-  padding-bottom: 0.75rem;
 }
 
 .py-4 {
@@ -1564,6 +1595,11 @@ video {
   --tw-ring-color: rgb(255 255 255 / var(--tw-ring-opacity));
 }
 
+.drop-shadow-lg {
+  --tw-drop-shadow: drop-shadow(0 10px 8px rgb(0 0 0 / 0.04)) drop-shadow(0 4px 3px rgb(0 0 0 / 0.1));
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
+
 .backdrop-blur-sm {
   --tw-backdrop-blur: blur(4px);
   -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
@@ -1592,16 +1628,16 @@ video {
   transition-duration: 300ms;
 }
 
-.duration-200 {
-  transition-duration: 200ms;
-}
-
 .duration-500 {
   transition-duration: 500ms;
 }
 
 .ease-in-out {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.hover\:flex:hover {
+  display: flex;
 }
 
 .hover\:-translate-y-1:hover {
@@ -1619,6 +1655,11 @@ video {
   border-radius: 14px;
 }
 
+.hover\:bg-white:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
 .hover\:bg-gray-200:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(229 231 235 / var(--tw-bg-opacity));
@@ -1632,6 +1673,11 @@ video {
 .hover\:bg-\[\#5f1e75\]:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(95 30 117 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-blue-400:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(96 165 250 / var(--tw-bg-opacity));
 }
 
 .hover\:text-gray-900:hover {
@@ -1656,6 +1702,10 @@ video {
   --tw-shadow: 0px 7px 16px rgba(0,0,0,0.14);
   --tw-shadow-colored: 0px 7px 16px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.hover\:duration-700:hover {
+  transition-duration: 700ms;
 }
 
 .focus\:border-blue-500:focus {
@@ -1688,6 +1738,10 @@ video {
 .focus\:ring-\[\#5f1e75\]:focus {
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(95 30 117 / var(--tw-ring-opacity));
+}
+
+.peer:hover ~ .peer-hover\:flex {
+  display: flex;
 }
 
 @media (prefers-color-scheme: dark) {
